# napi-android

./: .gitignore  README.md  build.gradle  package.json  settings.gradle  tsconfig.json
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  Init.cpp  native-lib.cpp
app/src/main/cpp/napi/: js_native_api.h  js_native_api_types.h  native_api.cpp  native_api_util.h
app/src/main/cpp/quickjs/: quickjs.c  quickjs.h
app/src/main/cpp/runtime/: Console.cpp  Console.h  Constants.cpp  Constants.h  MessageLoopTimer.cpp  MessageLoopTimer.h  ModuleInternal.cpp  ModuleInternal.h  NativeScriptAssert.h  NativeScriptException.cpp  NativeScriptException.h  Performance.h  Runtime.cpp  Runtime.h  SIGHandler.h  com_tns_Runtime.cpp
app/src/main/cpp/runtime/callbackhandlers/: CallbackHandlers.cpp  CallbackHandlers.h
app/src/main/cpp/runtime/console/: Console.cpp  Console.h
app/src/main/cpp/runtime/constants/: Constants.h
app/src/main/cpp/runtime/conversion/: ArgConverter.cpp  ArgsWrapper.h  ArrayBufferHelper.h  ArrayElementAccessor.h  ArrayHelper.h  JsArgConverter.h  JsArgToArrayConverter.cpp  NumericCasts.h
app/src/main/cpp/runtime/convert/: ArgConverter.cpp  ArgConverter.h  ArrayElementAccessor.cpp  JsArgConverter.cpp  JsArgToArrayConverter.cpp  JsArgToArrayConverter.h  NumericCasts.cpp  ObjectManager.cpp  ObjectManager.h
app/src/main/cpp/runtime/exceptions/: NativeScriptException.cpp  NativeScriptException.h
app/src/main/cpp/runtime/global/: GlobalHelpers.cpp  GlobalHelpers.h
app/src/main/cpp/runtime/inspector/: com_tns_AndroidJsV8Inspector.cpp
app/src/main/cpp/runtime/instrumentation/: ManualInstrumentation.cpp  ManualInstrumentation.h
app/src/main/cpp/runtime/jni/: ArgConverter.cpp  ArgConverter.h  ArrayBufferHelper.cpp  ArrayBufferHelper.h  ArrayHelper.cpp  AssetExtractor.cpp  AssetExtractor.h  AssetExtractorJavaBinding.cpp  DirectBuffer.cpp  DirectBuffer.h  File.cpp  File.h  JEnv.cpp  JEnv.h  JType.cpp  JType.h  JniLocalRef.h  JniSignatureParser.cpp  JniSignatureParser.h  LRUCache.h  Logger.cpp  Logger.h  Util.cpp  Util.h
app/src/main/cpp/runtime/messageloop/: MessageLoopTimer.cpp
app/src/main/cpp/runtime/metadata/: CallbackHandlers.cpp  CallbackHandlers.h  FieldAccessor.cpp  FieldAccessor.h  FieldCallbackData.h  MetadataBuilder.cpp  MetadataBuilder.h  MetadataEntry.cpp  MetadataEntry.h  MetadataFieldInfo.h  MetadataMethodInfo.cpp  MetadataMethodInfo.h  MetadataNode.cpp  MetadataNode.h  MetadataReader.cpp  MetadataReader.h  MetadataTreeNode.cpp  MetadataTreeNode.h  MethodCache.cpp  MethodCache.h  Version.h
app/src/main/cpp/runtime/module/: ModuleInternal.cpp  ModuleInternal.h
app/src/main/cpp/runtime/objectmanager/: ObjectManager.cpp  ObjectManager.h
app/src/main/cpp/runtime/performance/: Performance.h
app/src/main/cpp/runtime/profiler/: SimpleProfiler.cpp  SimpleProfiler.h
app/src/main/cpp/runtime/sighandler/: SIGHandler.h
app/src/main/cpp/runtime/timers/: Timers.cpp  Timers.h
test-app/runtime/: CMakeLists.txt  build.gradle
test-app/runtime/src/main/cpp/hermes/: jsr.cpp  jsr.h
test-app/runtime/src/main/cpp/modules/: NSRuntimeModules.h
test-app/runtime/src/main/cpp/modules/url/: URL.cpp  URL.h  URLSearchParams.cpp  URLSearchParams.h
test-app/runtime/src/main/cpp/napi/: js_native_api.h  js_native_api_types.h  native_api.c  native_api.cpp  native_api.h  native_api_internal.h  native_api_util.h
test-app/runtime/src/main/cpp/napi-util/: native_api_util.h
test-app/runtime/src/main/cpp/napi/common/: js_native_api.h  jsr_common.h  native_api_util.h
test-app/runtime/src/main/cpp/napi/hermes/: jsr.cpp  jsr.h
test-app/runtime/src/main/cpp/napi/jsc/: jsc-api.cpp  jsc-api.h  jsr.cpp  jsr.h
test-app/runtime/src/main/cpp/napi/primjs/: jsr.cpp  jsr.h  napi_env.cc  napi_env.h  napi_env_quickjs.h  napi_state.h  primjs-api.cc  primjs-api.h
test-app/runtime/src/main/cpp/napi/quickjs/: jsr.cpp  jsr.h  quickjs-api.c
test-app/runtime/src/main/cpp/napi/v8/: jsr.cpp  jsr.h  v8-api-internals.h  v8-api.cpp  v8-api.h
test-app/runtime/src/main/cpp/quickjs/: quickjs.c  quickjs.h
test-app/runtime/src/main/cpp/runtime/: Runtime.cpp  Runtime.h  com_tns_Runtime.cpp
test-app/runtime/src/main/cpp/runtime/assetextractor/: com_tns_AssetExtractor.cpp
test-app/runtime/src/main/cpp/runtime/callbackhandlers/: CallbackHandlers.cpp  CallbackHandlers.h
test-app/runtime/src/main/cpp/runtime/console/: Console.cpp  Console.h
test-app/runtime/src/main/cpp/runtime/constants/: Constants.cpp  Constants.h
test-app/runtime/src/main/cpp/runtime/conversion/: ArgConverter.cpp  ArgConverter.h  ArgsWrapper.h  ArrayBufferHelper.cpp  ArrayBufferHelper.h  ArrayElementAccessor.cpp  ArrayElementAccessor.h  ArrayHelper.cpp  ArrayHelper.h  JsArgConverter.cpp  JsArgConverter.h  JsArgToArrayConverter.cpp  JsArgToArrayConverter.h  NumericCasts.cpp  NumericCasts.h
test-app/runtime/src/main/cpp/runtime/exceptions/: NativeScriptAssert.h  NativeScriptException.cpp  NativeScriptException.h
test-app/runtime/src/main/cpp/runtime/global/: GlobalHelpers.cpp  GlobalHelpers.h
test-app/runtime/src/main/cpp/runtime/inspector/: JsV8InspectorClient.cpp  JsV8InspectorClient.h  com_tns_AndroidJsV8Inspector.cpp
test-app/runtime/src/main/cpp/runtime/instrumentation/: ManualInstrumentation.h
test-app/runtime/src/main/cpp/runtime/jni/: File.cpp  File.h  JEnv.cpp  JEnv.h  JniLocalRef.h
test-app/runtime/src/main/cpp/runtime/jsonhelper/: JSONObjectHelper.cpp  JSONObjectHelper.h
test-app/runtime/src/main/cpp/runtime/messageloop/: MessageLoopTimer.cpp  MessageLoopTimer.h
test-app/runtime/src/main/cpp/runtime/metadata/: FieldAccessor.cpp  FieldAccessor.h  FieldCallbackData.h  MetadataBuilder.cpp  MetadataBuilder.h  MetadataNode.cpp  MetadataNode.h  MetadataReader.cpp  MetadataReader.h  MetadataTreeNode.cpp  MethodCache.cpp  MethodCache.h
test-app/runtime/src/main/cpp/runtime/module/: ModuleInternal.cpp  ModuleInternal.h
test-app/runtime/src/main/cpp/runtime/objectmanager/: ObjectManager.cpp  ObjectManager.h
test-app/runtime/src/main/cpp/runtime/performance/: Performance.h
(+162 files in other folders)
